--- a/paper.bib
+++ b/paper.bib
@@ -64,7 +64,7 @@
   volume  = {108},
   pages   = {102831},
   issn    = {0167-8191},
-  doi     = {https://doi.org/10.1016/j.parco.2021.102831},
+  doi     = {10.1016/j.parco.2021.102831},
   year    = {2021},
 }
 
