Update DMStag JOSS paper with additional references

--- a/paper.bib
+++ b/paper.bib
@@ -64,7 +64,7 @@
   volume  = {108},
   pages   = {102831},
   issn    = {0167-8191},
-  doi     = {10.1016/j.parco.2021.102831},
+  doi     = {https://doi.org/10.1016/j.parco.2021.102831},
   year    = {2021},
 }
 
@@ -87,4 +87,24 @@
   number       = 12,
   pages        = {2182--2189},
   doi          = {10.1063/1.1761178},
+}
+
+@article{PusokKatzMayLi2022,
+  title={Chemical heterogeneity, convection and asymmetry beneath mid-ocean ridges},
+  author={Pusok, Adina E. and Katz, Richard F. and May, Dave A. and Li, Yuan},
+  journal={Geophysical Journal International},
+  volume={231},
+  number={3},
+  pages={2055--2078},
+  year={2022},
+  publisher={Oxford University Press}
+}
+
+@misc{PusokMayLiKatz2022,
+  author = {Pusok, Adina E. and May, Dave and Li, Yuan, and Katz, Richard},
+  title = {FD-PDE},
+  year = {2022},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/apusok/FD-PDE}
 }
