Make a few changes to references requested by editor Kyle Niemeyer

--- a/paper.bib
+++ b/paper.bib
@@ -7,6 +7,7 @@
   pages     = {889--901},
   publisher = {Society of Exploration Geophysicists},
   year      = {1986},
+  doi       = {10.1190/1.1442147},
 }
 
 @book{Gerya2019,
@@ -27,7 +28,6 @@
     and Stefano Zampini and Hong Zhang and Hong Zhang and Junchao Zhang},
   title        = {{PETS}c {W}eb page},
   url          = {https://petsc.org/},
-  howpublished = {\url{https://petsc.org/}},
   year         = {2022},
 }
 
@@ -64,7 +64,7 @@
   volume  = {108},
   pages   = {102831},
   issn    = {0167-8191},
-  doi     = {https://doi.org/10.1016/j.parco.2021.102831},
+  doi     = {10.1016/j.parco.2021.102831},
   year    = {2021},
 }
 
@@ -97,7 +97,8 @@
   number={3},
   pages={2055--2078},
   year={2022},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi = {10.1093/gji/ggac309},
 }
 
 @misc{PusokMayLiKatz2022,
